--- a/app/views/words/index.html.erb
+++ b/app/views/words/index.html.erb
@@ -1,16 +1,21 @@
-<h1>Listing words</h1>
+<h1>Doogle</h1>
 
 <table>
+
+  <%= form_tag(words_path, method: :get) do %>
+    <%= text_field_tag :name, params[:name] %>
+    <%= submit_tag 'Search' %>
+  <% end %>
+
   <tr>
-    <th>Name</th>
     <th>Definition</th>
   </tr>
-
   <% @words.each do |word| %>
     <tr>
-      <td><%= word.name %></td>
       <td><%= word.definition %></td>
-      <td><%= link_to 'Show', word_path(word) %></td>
+<!--      <td><%= link_to 'Show', word_path(word) %></td>
+      <td><%= link_to 'Edit', word_path(word) %></td> -->
     </tr>
   <% end %>
+
 </table>
