--- a/app/views/words/new.html.erb
+++ b/app/views/words/new.html.erb
@@ -1,15 +1,3 @@
 <h1>New Word New</h1>
 
-<%= form_for :word, url: words_path do |f| %>
-  <p>
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </p>
-  <p>
-    <%= f.label :definition %><br>
-    <%= f.text_area :definition %>
-  </p>
-  <p>
-    <%= f.submit %>
-  </p>
-<% end %>
+<%= render 'form' %>
