--- a/app/views/words/index.html.erb
+++ b/app/views/words/index.html.erb
@@ -7,15 +7,13 @@
     <%= submit_tag 'Search' %>
   <% end %>
 
+
   <tr>
     <th>Definition</th>
   </tr>
-  <% @words.each do |word| %>
+
     <tr>
-      <td><%= word.definition %></td>
-<!--      <td><%= link_to 'Show', word_path(word) %></td>
-      <td><%= link_to 'Edit', word_path(word) %></td> -->
+      <td><% @word %></td>
     </tr>
-  <% end %>
 
 </table>
